Fix content-item-options for todos, so they don't overlap with checkbox

--- a/app/assets/stylesheets/application/todos.css.sass
+++ b/app/assets/stylesheets/application/todos.css.sass
@@ -21,7 +21,7 @@
     margin-left: 16px!important
     margin-top: 2px
   .content-item-options
-    width: 100px
+    width: 70px
     left: -40px
     margin-top: -8px
     ul.nav.nav-pills
